// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autosuggest rendering should initially render empty component correctly 1`] = `
<DocumentFragment>
  <div
    class="SelectBase"
  >
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="downshift-0-label"
      class="SelectBase__main"
      role="combobox"
    >
      <div
        class="FieldWrapper SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <div
            class="Autosuggest__wrapper"
          >
            <input
              aria-autocomplete="list"
              aria-labelledby="downshift-0-label"
              autocomplete="off"
              class="Autosuggest__input"
              data-lpignore="true"
              placeholder="type here..."
              value=""
            />
          </div>
          <ul
            aria-labelledby="downshift-0-label"
            class="List"
            id="downshift-0-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Autosuggest rendering should initially render focused component correctly 1`] = `
<DocumentFragment>
  <div
    class="SelectBase"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-2-label"
      aria-owns="downshift-2-menu"
      class="SelectBase__main SelectBase__main--focused"
      role="combobox"
    >
      <div
        class="FieldWrapper FieldWrapper--isFocused SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <div
            class="Autosuggest__wrapper Autosuggest__wrapper--isFocused"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-2-menu"
              aria-labelledby="downshift-2-label"
              autocomplete="off"
              class="Autosuggest__input"
              data-lpignore="true"
              placeholder="type here..."
              value=""
            />
          </div>
          <ul
            aria-labelledby="downshift-2-label"
            class="List SelectBase__list--focused"
            id="downshift-2-menu"
            role="listbox"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Autosuggest rendering should initially render focused component with suggestions list correctly 1`] = `
<DocumentFragment>
  <div
    class="SelectBase"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-4-label"
      aria-owns="downshift-4-menu"
      class="SelectBase__main SelectBase__main--focused"
      role="combobox"
    >
      <div
        class="FieldWrapper FieldWrapper--isFocused SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <div
            class="Autosuggest__wrapper Autosuggest__wrapper--isFocused"
          >
            <input
              aria-autocomplete="list"
              aria-controls="downshift-4-menu"
              aria-labelledby="downshift-4-label"
              autocomplete="off"
              class="Autosuggest__input"
              data-lpignore="true"
              placeholder="type here..."
              value=""
            />
          </div>
          <ul
            aria-labelledby="downshift-4-label"
            class="List SelectBase__list--focused"
            id="downshift-4-menu"
            role="listbox"
          >
            <li
              aria-selected="false"
              class="ListItem ListItem--clickable"
              id="downshift-4-item-0"
              role="option"
            >
              <span>
                Sun
              </span>
            </li>
            <li
              aria-selected="false"
              class="ListItem ListItem--clickable"
              id="downshift-4-item-1"
              role="option"
            >
              <span>
                Moon
              </span>
            </li>
            <li
              aria-selected="false"
              class="ListItem ListItem--clickable"
              id="downshift-4-item-2"
              role="option"
            >
              <span>
                Mercury
              </span>
            </li>
            <li
              aria-selected="false"
              class="ListItem ListItem--clickable"
              id="downshift-4-item-3"
              role="option"
            >
              <span>
                Venus
              </span>
            </li>
            <li
              aria-selected="false"
              class="ListItem ListItem--clickable"
              id="downshift-4-item-4"
              role="option"
            >
              <span>
                Earth
              </span>
            </li>
            <li
              aria-selected="false"
              class="ListItem ListItem--clickable"
              id="downshift-4-item-5"
              role="option"
            >
              <span>
                Mars
              </span>
            </li>
            <li
              aria-selected="false"
              class="ListItem ListItem--clickable"
              id="downshift-4-item-6"
              role="option"
            >
              <span>
                Jupiter
              </span>
            </li>
            <li
              aria-selected="false"
              class="ListItem ListItem--clickable"
              id="downshift-4-item-7"
              role="option"
            >
              <span>
                Saturn
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Autosuggest rendering should render component with suggestions 1`] = `
<DocumentFragment>
  <div
    class="SelectBase"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-5-label"
      aria-owns="downshift-5-menu"
      class="SelectBase__main SelectBase__main--focused"
      role="combobox"
    >
      <div
        class="FieldWrapper FieldWrapper--isFocused SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <div
            class="Autosuggest__wrapper Autosuggest__wrapper--isFocused"
          >
            <input
              aria-activedescendant="downshift-5-item-0"
              aria-autocomplete="list"
              aria-controls="downshift-5-menu"
              aria-labelledby="downshift-5-label"
              autocomplete="off"
              class="Autosuggest__input"
              data-lpignore="true"
              placeholder="type here..."
              value="driver"
            />
          </div>
          <ul
            aria-labelledby="downshift-5-label"
            class="List SelectBase__list--focused"
            id="downshift-5-menu"
            role="listbox"
          >
            <li
              aria-selected="false"
              class="ListItem ListItem--isHighlighted ListItem--clickable"
              id="downshift-5-item-0"
              role="option"
            >
              <span>
                Moon
              </span>
            </li>
            <li
              aria-selected="false"
              class="ListItem ListItem--clickable"
              id="downshift-5-item-1"
              role="option"
            >
              <span>
                Mercury
              </span>
            </li>
            <li
              aria-selected="false"
              class="ListItem ListItem--clickable"
              id="downshift-5-item-2"
              role="option"
            >
              <span>
                Venus
              </span>
            </li>
            <li
              aria-selected="false"
              class="ListItem ListItem--clickable"
              id="downshift-5-item-3"
              role="option"
            >
              <span>
                Earth
              </span>
            </li>
            <li
              aria-selected="false"
              class="ListItem ListItem--clickable"
              id="downshift-5-item-4"
              role="option"
            >
              <span>
                Mars
              </span>
            </li>
            <li
              aria-selected="false"
              class="ListItem ListItem--clickable"
              id="downshift-5-item-5"
              role="option"
            >
              <span>
                Jupiter
              </span>
            </li>
            <li
              aria-selected="false"
              class="ListItem ListItem--clickable"
              id="downshift-5-item-6"
              role="option"
            >
              <span>
                Saturn
              </span>
            </li>
            <li
              aria-selected="false"
              class="ListItem ListItem--clickable"
              id="downshift-5-item-7"
              role="option"
            >
              <span>
                Neptune
              </span>
            </li>
            <li
              aria-selected="false"
              class="ListItem ListItem--disabled"
              disabled=""
              id="downshift-5-item-8"
              role="option"
            >
              <span>
                Pluto
              </span>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Autosuggest rendering should render isLoading state 1`] = `
<DocumentFragment>
  <div
    class="SelectBase"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-labelledby="downshift-6-label"
      aria-owns="downshift-6-menu"
      class="SelectBase__main SelectBase__main--focused"
      role="combobox"
    >
      <div
        class="FieldWrapper FieldWrapper--isFocused SelectBase__field"
      >
        <div
          class="FieldWrapper__content"
        >
          <div
            class="Autosuggest__wrapper Autosuggest__wrapper--isFocused"
          >
            <input
              aria-activedescendant="downshift-6-item-0"
              aria-autocomplete="list"
              aria-controls="downshift-6-menu"
              aria-labelledby="downshift-6-label"
              autocomplete="off"
              class="Autosuggest__input"
              data-lpignore="true"
              placeholder="type here..."
              value="driver"
            />
          </div>
          <ul
            aria-labelledby="downshift-6-label"
            class="List SelectBase__list--focused"
            id="downshift-6-menu"
            role="listbox"
          >
            <li
              aria-selected="false"
              class="ListItem"
              role="option"
            >
              <div
                class="SuggestionsList__loaderItem"
                role="listitem"
              >
                <div
                  class="ContentPlaceholder"
                  style="animation-duration: 1s;"
                >
                   
                  <div
                    class="ContentPlaceholder__mask"
                    style="width: 0%;"
                  />
                </div>
              </div>
            </li>
            <li
              aria-selected="false"
              class="ListItem"
              role="option"
            >
              <div
                class="SuggestionsList__loaderItem"
                role="listitem"
              >
                <div
                  class="ContentPlaceholder"
                  style="animation-duration: 1s;"
                >
                   
                  <div
                    class="ContentPlaceholder__mask"
                    style="width: 0%;"
                  />
                </div>
              </div>
            </li>
            <li
              aria-selected="false"
              class="ListItem"
              role="option"
            >
              <div
                class="SuggestionsList__loaderItem"
                role="listitem"
              >
                <div
                  class="ContentPlaceholder"
                  style="animation-duration: 1s;"
                >
                   
                  <div
                    class="ContentPlaceholder__mask"
                    style="width: 0%;"
                  />
                </div>
              </div>
            </li>
            <li
              aria-selected="false"
              class="ListItem"
              role="option"
            >
              <div
                class="SuggestionsList__loaderItem"
                role="listitem"
              >
                <div
                  class="ContentPlaceholder"
                  style="animation-duration: 1s;"
                >
                   
                  <div
                    class="ContentPlaceholder__mask"
                    style="width: 0%;"
                  />
                </div>
              </div>
            </li>
            <li
              aria-selected="false"
              class="ListItem"
              role="option"
            >
              <div
                class="SuggestionsList__loaderItem"
                role="listitem"
              >
                <div
                  class="ContentPlaceholder"
                  style="animation-duration: 1s;"
                >
                   
                  <div
                    class="ContentPlaceholder__mask"
                    style="width: 0%;"
                  />
                </div>
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
